# mergeUSC

./: Cargo.toml  Cargo.workspace.toml  LICENSE  README.md  merged.usc  test.py
.github/workflows/: release.yml
crates/MergeUSC_Core/: .gitignore  Cargo.toml
crates/MergeUSC_Core/src/: lib.rs  type.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
example/: example.usc  example2.usc  marge_sumple.usc
src/: main.rs
static/: index.html
