[package]
name = "MergeUsc"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
warp = "0.3.7"
mergeusc_core = { path = "./crates/MergeUSC_Core" }

[workspace]
members = [
    "crates/cli",
    "crates/mergeUsc_Core"
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1